# FreeRTOS-TFG

./: .gitignore  .gitmodules  DEMO  PORT
FreeRTOS/: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bak  Makefile  TODO.md  break.gdb  cmake_install.cmake  compile_commands.json  debug.gdb  funciones.d2  gdb.txt  notas.md  obj.dump  run.sh  tmp
FreeRTOS/.cache/clangd/index/: FreeRTOS.h.1736859CE1D67983.idx  FreeRTOSConfig.h.789F9A2DB87E791E.idx  FreeRTOSConfig.h.D0B71D360322C506.idx  ParTest.c.84334E9B05D19607.idx  croutine.c.CBAC1222A0F5F2B1.idx  croutine.h.110D8BFD93532575.idx  deprecated_definitions.h.D5749652D7359A20.idx  event_groups.c.513E15BC04AD0370.idx  event_groups.h.53FABDEAE9AEA94F.idx  heap_1.c.33060E6350B0844D.idx  list.c.3ECC7EB79D9FB570.idx  list.h.85B7F3EF90994F4F.idx  main.c.E361191897E2BEE4.idx  mpu_wrappers.h.B9B120209C918810.idx  partest.h.0C38D9EA2CF95A7C.idx  port.c.670D94168B2470F1.idx  portable.h.E10E44C8F286074B.idx  portmacro.h.C18C174E00D13D81.idx  projdefs.h.F2FD176555A40C3F.idx  queue.c.9FBA4C0BBE6D7F3C.idx  queue.h.F37FFC15E6CDC2A7.idx  semphr.h.064405ABAE13798D.idx  stack_macros.h.C9BF0F924776C817.idx  stream_buffer.c.B88859F217D6324E.idx  stream_buffer.h.77DC5380882FD438.idx  task.h.CB7A99C2BBE43B00.idx  tasks.c.4BB53ACD1C92A534.idx  timers.c.A2FB41F63DE2FBBC.idx  timers.h.A1540DAD1EB15CE4.idx
FreeRTOS/Demo/ARM7_MC13224V_GCC/: Demo.dump  FreeRTOSConfig.h  break.gdb  econotag.ld  main.c  notas.md  obj.dump  run.sh  trace.gdb
FreeRTOS/Demo/ARM7_MC13224V_GCC/ParTest/: ParTest.c  flash.c  integer.c
FreeRTOS/Demo/MC13224V_GCC/: main.c
FreeRTOS/Demo/MC13224V_GCC/ParTest/: ParTest.c
FreeRTOS/FreeRTOS-Kernel/: Makefile  cmake_install.cmake
FreeRTOS/FreeRTOS-Kernel/include/: Makefile  cmake_install.cmake
FreeRTOS/FreeRTOS-Kernel/portable/: Makefile  cmake_install.cmake
FreeRTOS/tools-econotag/bbmc/: bbmc
FreeRTOS/tools-econotag/mc1322x-load/: mc1322x-load
